# technopark_C-Cpp_IZ_2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
project/include/: search_by_files_in_dir.h
project/lib_search_by_files_in_dir/: search_by_files_in_dir.c  search_word_in_file.c  search_word_in_str.c
project/src/: main.c
tests/: tests.cpp
tests/input_emulator/: f1.c  f2.c  f3.c  f4.c  f5.c
